2048-service.yml
apiVersion: v1
kind: Service
metadata:
  name: deployment-2048
spec:
  ports:
    - name: deployment-2048
      port: 10000
      targetPort: 80
  selector:
    app.kubernetes.io/name: app-2048
  type: NodePort
