2048-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: 2048-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/scheme: internet-facing
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: deployment-2048
              servicePort: 80
